manifests/community/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
    service: api
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        service: api
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: yarn
          emptyDir:
            medium: Memory
        - name: tmp
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir:
            medium: Memory
      containers:
        - name: api
          image: ghcr.io/realliance/community-api:main@sha256:0ecb7feab7143a0d98a6e99500f503c465495179d02cf60d12468f3fa6eb720f
          ports:
            - containerPort: 3000
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - mountPath: /.yarn
              name: yarn
            - mountPath: /tmp
              name: tmp
            - mountPath: /.cache
              name: cache
          lifecycle:
            postStart:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - "./migrate.sh"
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    service: api
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: api
