manifests/community/psql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: psql
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: psql
  selector:
    cluster-name: acid-community
