manifests/community/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-ingress
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: default-src 'none'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://id.realliance.net https://login.microsoftonline.com/consumers/v2.0/.well-known/openid-configuration https://login.microsoftonline.com/consumers/oauth2/v2.0/token https://playerdb.co; font-src 'self' data:; img-src 'self' data: https://crafthead.net https://playerdb.co; base-uri 'none'; form-action 'self'; frame-ancestors 'none'; upgr [...]
spec:
  tls:
    - hosts:
        - community.realliance.net
      secretName: community-tls
  rules:
    - host: community.realliance.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
